make distributable archives